fix text wrap

--- a/src/app/pages/component-category-list/component-category-list.scss
+++ b/src/app/pages/component-category-list/component-category-list.scss
@@ -8,27 +8,27 @@
   justify-content: center;
 }
 
-@media (max-width: 1780px) {
+@media (max-width: 1795px) {
   .docs-component-category-list-summary {
-    max-width: 1160px;
+    max-width: 1120px;
   }
 }
 
-@media (max-width: 1480px) {
+@media (max-width: 1495px) {
   .docs-component-category-list-summary {
-    max-width: 860px;
+    max-width: 820px;
   }
 }
 
-@media (max-width: 1180px) {
+@media (max-width: 1195px) {
   .docs-component-category-list-summary {
-    max-width: 560px;
+    max-width: 520px;
   }
 }
 
-@media (max-width: 639px) {
+@media (max-width: 654px) {
   .docs-component-category-list-summary {
-    max-width: 280px;
+    max-width: 220px;
   }
 }
 
